prevent display overflow and add credit text

--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     text-shadow: 2px;
     height: 100vh;
 }
 
 .calculator-container {
+    margin-top: 3%;
+    max-width: 336px;
     border-style: solid;
     border-width: 1px;
     border-radius: 2%;
@@ -23,8 +26,8 @@ body {
 
 button {
     padding: 20px;
-    font-size: 35px;
-    width: 103px;
+    font-size: 25px;
+    width: 80px;
     border-radius: 40%;
     text-align: center;
     margin: 2px;
@@ -41,16 +44,18 @@ button {
     border-width: 5px;
     padding: 10px;
     text-align: right;
-    height: 110px;
+    min-height: 95px;
     align-content: center;
     text-shadow: 1.3px 1.3px #383838;
     background-color: rgb(187, 187, 187);
     box-shadow : 2px 2px 1px 1px black;
+    white-space: normal;
+    word-break: break-word;
 }
 
 .display {
     font-weight: 500;
-    font-size: 55px;
+    font-size: 42px;
 }
 
 .history {
@@ -151,6 +156,12 @@ button {
     padding: 0;
     box-sizing: border-box;
     font-weight: bold;
-    font-size: 60px;
+    font-size: 40px;
 }
+
+h2 {
+    padding: 0;
+    margin: 10px;
+}
+
 
